added a stop button

--- a/popup.html
+++ b/popup.html
@@ -62,13 +62,14 @@
                     <p style="font-family: 'Work Sans', sans-serif; font-weight: 500; font-size: 14px;">Audio</p>
                   </div>
                   <div style="width: 36px;">
-                    <img id="stop_video" src="/images/_Toggle base.png" style="width: 36px; height: 20px;" alt="toggle">
+                    <img  src="/images/_Toggle base.png" style="width: 36px; height: 20px;" alt="toggle">
                   </div>
                 </div>
               </div>
               <button id="start_video" style="height: 51px;border:none; border-radius: 12px; background-color: #120B48; color: white; font-weight: 500; font-family: 'Work Sans', sans-serif; text-align: center; display: flex; justify-content: center; align-items: center;">
                 Start Recording
               </button>
+		<center><p style='font-size: 10px; cursor:pointer;' id="stop_video">Stop Recording</p></center>
             </div>
           </section>
       </div>
